# jj-mcp-server

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: integration_tests.rs
