[package]
name = "jj-mcp-server"
version = "1.0.0"
edition = "2024"
description = "MCP server for Jujutsu (jj) version control system"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "jj-mcp-server"
path = "src/main.rs"

[dependencies]
mcp-sdk = "0.0.3"  # Note: You'll need to verify the actual MCP SDK version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

